--- a/.github/workflows/repository-updater.yaml
+++ b/.github/workflows/repository-updater.yaml
@@ -5,7 +5,7 @@ name: Repository Updater
 on:
   workflow_call:
     secrets:
-      UPDATER_TOKEN:
+      DISPATCH_TOKEN:
         required: true
 
 jobs:
@@ -24,4 +24,4 @@ jobs:
         with:
           addon: ${{ github.event.client_payload.addon }}
           repository: ${{ github.repository }}
-          token: ${{ secrets.UPDATER_TOKEN }}
+          token: ${{ secrets.DISPATCH_TOKEN }}
