--- a/.github/workflows/addon-ci.yaml
+++ b/.github/workflows/addon-ci.yaml
@@ -93,6 +93,8 @@ jobs:
         uses: ludeeus/action-shellcheck@1.1.0
         env:
           SHELLCHECK_OPTS: -s bash
+        with:
+          ignore_paths: .devcontainer
 
   lint-yamllint:
     name: YAMLLint
