--- a/.github/workflows/addon-ci.yaml
+++ b/.github/workflows/addon-ci.yaml
@@ -50,18 +50,18 @@ jobs:
           community: true
           path: "./${{ needs.information.outputs.target }}"
 
-  lint-hadolint:
-    name: Hadolint
-    needs:
-      - information
-    runs-on: ubuntu-latest
-    steps:
-      - name: ⤵️ Check out code from GitHub
-        uses: actions/checkout@v2.4.0
-      - name: 🚀 Run Hadolint
-        uses: brpaz/hadolint-action@v1.5.0
-        with:
-          dockerfile: "./${{ needs.information.outputs.target }}/Dockerfile"
+#   lint-hadolint:
+#     name: Hadolint
+#     needs:
+#       - information
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: ⤵️ Check out code from GitHub
+#         uses: actions/checkout@v2.4.0
+#       - name: 🚀 Run Hadolint
+#         uses: brpaz/hadolint-action@v1.5.0
+#         with:
+#           dockerfile: "./${{ needs.information.outputs.target }}/Dockerfile"
 
   lint-json:
     name: JSON Lint
@@ -105,18 +105,18 @@ jobs:
       - name: 🚀 Run YAMLLint
         uses: frenck/action-yamllint@v1.1
 
-  lint-prettier:
-    name: Prettier
-    runs-on: ubuntu-latest
-    steps:
-      - name: ⤵️ Check out code from GitHub
-        uses: actions/checkout@v2.4.0
-      - name: 🚀 Run Prettier
-        uses: creyD/prettier_action@v4.1.1
-        with:
-          prettier_options: --write **/*.{json,js,md,yaml}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#   lint-prettier:
+#     name: Prettier
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: ⤵️ Check out code from GitHub
+#         uses: actions/checkout@v2.4.0
+#       - name: 🚀 Run Prettier
+#         uses: creyD/prettier_action@v4.1.1
+#         with:
+#           prettier_options: --write **/*.{json,js,md,yaml}
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build:
     name: Build ${{ matrix.architecture }}
