--- a/.github/workflows/addon-deploy.yaml
+++ b/.github/workflows/addon-deploy.yaml
@@ -175,7 +175,7 @@ jobs:
         uses: peter-evans/repository-dispatch@v1.1.3
         with:
           token: ${{ secrets.DISPATCH_TOKEN }}
-          repository: ${{ github.repository_owner }}/hassio-repo-dev
+          repository: ${{ github.repository_owner }}/hassio-repo
           event-type: update
           client-payload: >
             {
